--- a/assets/css/destacados.css
+++ b/assets/css/destacados.css
@@ -12,45 +12,41 @@
 }
 
 .trending__secundario:nth-child(2) {
-    background-image: url("../img/pubg.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    grid-column-start: 4;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    background: url("../img/pubg.jpg") center / cover no-repeat;
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
 }
 
 .trending__secundario:nth-child(3) {
-    background-image: url("../img/slack.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    grid-column-start: 4;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 2;
+    background: url("../img/slack.png") center / cover no-repeat;
+    grid-column: 4 / 5;
+    grid-row: 2 / 2;
 }
 
 .trending__secundario:nth-child(4) {
-    background-image: url("../img/whatsapp.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    grid-column-start: 4;
-    grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 3;
+    background: url("../img/whatsapp.png") center / cover no-repeat;
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
 }
 
 .trending__secundario:nth-child(5) {
-    background-image: url("../img/cs-go.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 3;
+    background: url("../img/cs-go.jpg") center / cover no-repeat;
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
+
+.trending__categorias {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+}
+
+.trending__categorias--lista {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: space-between;
+}
+
+.trending__categorias--item{
+
 }
