--- a/assets/css/destacados.css
+++ b/assets/css/destacados.css
@@ -3,6 +3,7 @@
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 33.33% 33.33% 33.33%;
     height: calc(100vh - 50px);
+    gap: 0.3rem;
 }
 
 .trending__principal {
@@ -48,5 +49,28 @@
 }
 
 .trending__categorias--item{
+    align-items: center;
+    background: #FDFDFD;
+    display: flex;
+    color: #333333;
+    width: 50%;
+    padding: 1rem;
+}
 
+.trending__categorias--link {
+    color: inherit;
+}
+
+.trending__titulo {
+    color: #FDFDFD;
+    background: rgb(0, 0, 0, 0.5);
+    width: 100%;
+    text-align: center;
+    padding: 0.6em;
+}
+
+.box {
+    align-items: flex-end;
+    display: flex;
+    justify-content: center;
 }
